  101 Luca Falavigna	2008-04-28
      Documentation improved

  100 Luca Falavigna	2008-04-26
      Add Intrepid pbuilder configuration file, remove Gutsy one

   99 Luca Falavigna	2008-04-26
      Add missing options in debomatic.conf.5.docbook

   98 Luca Falavigna	2008-04-26
      Add CHANGES file

   97 Luca Falavigna	2008-03-19
      Remove GPG signature from publicly available .changes files

   96 Luca Falavigna	2008-03-16
      Added rm_package function

   95 Luca Falavigna	2008-03-16
      Add GPG support to check signed source.changes files

   94 Luca Falavigna	2008-03-16
      Add support for checks section in configure file

   93 Luca Falavigna	2008-03-04
      Check return status of the functions

   92 Luca Falavigna	2008-02-18
      Update copyright informations and FSF postal address

   91 Luca Falavigna	2008-02-17
      Download missing files from MIRRORSITE. This way it is no strictly
      necessary including original tarball in the upload each time.

   90 Luca Falavigna	2007-12-09
      Really release the semaphore in pbuilderlock_release

   89 Luca Falavigna	2007-12-02
      Check pbuilder status after locking pbuilderlock

   88 Luca Falavigna	2007-11-29
      Make debomatic executable



Thu 2007-11-29 22:01:35 +0100
Stable release: 0.4

   87 Luca Falavigna	2007-11-29
      Remove redundant call to add_package

   86 Luca Falavigna	2007-11-29
      Remove Debomatic modules directory during uninstall

   85 Luca Falavigna	2007-11-28
      Correct typo in author_email

   84 Luca Falavigna	2007-11-28
      Regression: create 'result' if it does not exist

   83 Luca Falavigna	2007-10-06
      Skip package if it is already in packagequeue

   82 Luca Falavigna	2007-10-06
      Do not exclude sleep routine if inotify support is present

   81 Luca Falavigna	2007-10-06
      Implement the packagequeue

   80 Luca Falavigna	2007-10-02
      Add locks module to manage build locks, even per-distribution ones

   79 Luca Falavigna	2007-09-30