@@ -13,7 +13,7 @@
 <br>
 <h3>Introduction</h3>
 <p>This is Deb-o-Matic, a easy to use build machine for Debian-based source packages based on pbuilder. It provides a simple tool to automate the build of  source packages with limited user interaction and a simple configuration.</p>
-<p>It has some useful feature such as automatic update of pbuilder, automatic scan and selection of source packages to build and lintian/linda support. It is meant to help developers to build their packages without worrying too much of compilation, since it will run in background and no user feedback is required during the whole process.</p>
+<p>It has some useful feature such as automatic update of pbuilder, automatic scan and selection of source packages to build and lintian support. It is meant to help developers to build their packages without worrying too much of compilation, since it will run in background and no user feedback is required during the whole process.</p>
 <h3>Requisites</h3>
 These packages are required to build and install Deb-o-Matic on your system:
 <ul>
@@ -31,7 +31,6 @@ To enable additional features, you may want to install these packages:
 <li>python-pyinotify</li>
 <li>gnupg</li>
 <li>lintian</li>
-<li>linda</li>
 </ul>
 <p>A Internet connection is also required, broadband access is recommended since debootstrap will fetch several packages from internet to set up pbuilder chroot environment.</p>
 <h3>Installation and removal</h3>
