@@ -10,10 +10,10 @@ packages based on pbuilder. It provides a simple tool to automate the build of
 source packages with limited user interaction and a simple configuration.
 
 It has some useful feature such as automatic update of pbuilder, automatic scan
-and selection of source packages to build and lintian/linda support. It is
-meant to help developers to build their packages without worrying too much of
-compilation, since it will run in background and no user feedback is required
-during the whole process.
+and selection of source packages to build and lintian support. It is meant to
+help developers to build their packages without worrying too much of compilation,
+since it will run in background and no user feedback is required during the
+whole process.
 
 
 Requisites
@@ -34,7 +34,6 @@ To enable additional features, you may want to install these packages:
     * python-pyinotify
     * gnupg
     * lintian
-    * linda
 
 A Internet connection is also required, broadband access is recommended since
 debootstrap will fetch several packages from internet to set up pbuilder chroot
