@@ -42,5 +42,3 @@ keyring: /etc/debomatic/debomatic.gpg
 # Set this option to 1 if you want to enable lintian support
 lintian: 0
 
-# Set this option to 1 if you want to enable linda support
-linda: 0
