@@ -1,3 +1,6 @@
+  102 Luca Falavigna	2008-06-25
+      Remove linda support, software is obsolete
+
   101 Luca Falavigna	2008-04-28
       Documentation improved
 
